--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -2,6 +2,7 @@
 # Please keep this file sorted alphabetically.
 src/GNOME_Yelp.server.in
 src/yelp-base.c
+src/yelp-db2html.c
 src/yelp-history.c
 src/yelp-html.c
 src/yelp-info.c
