Added some file(s). New traditional Chinese translation from Joe Man
2002-04-16  Abel Cheung  <maddog@linux.org.hk>

	* .cvsignore: Added some file(s).
	* zh_TW.po: New traditional Chinese translation from
	Joe Man <trmetal@yahoo.com.hk>

--- a/po/.cvsignore
+++ b/po/.cvsignore
@@ -1,13 +1,13 @@
-*.mo
 *.gmo
+*.mo
 *.pot
-POTFILES
 Makefile
 Makefile.in
 Makefile.in.in
+POTFILES
+cat-id-tbl.c
+messages
+missing
 po2tbl.sed
 po2tbl.sed.in
 stamp-cat-id
-cat-id-tbl.c
-mrproject.potmessages
-messages
