--- a/configure.in
+++ b/configure.in
@@ -28,7 +28,7 @@ GETTEXT_PACKAGE=yelp
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")
 
-ALL_LINGUAS="az bg da de el es et fr ja lv ms nl nn no pl pt pt_BR ru sk sl sv tr uk wa zh_CN"
+ALL_LINGUAS="az bg da de el es et fr ja lv ms nl nn no pl pt pt_BR ru sk sl sv tr uk wa zh_CN zh_TW"
 AM_GLIB_GNU_GETTEXT
 
 if test "x$prefix" = "xNONE"; then
