- added yelp-reader.[ch]
2002-05-08  Mikael Hallendal  <micke@codefactory.se>

	* src/Makefile.am (yelp_SOURCES):
	- added yelp-reader.[ch]

	* src/yelp-uri.[ch]:
	- removed the YelpReader-stuff from here.

	* src/yelp-reader.[ch]:
	- starting on this class that will take care of reading any given
	  YelpURI *uri and signalling when there is something to read.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -47,6 +47,7 @@ yelp_SOURCES =								\
 	yelp-info.c		yelp-info.h				\
 	yelp-main.c							\
 	yelp-man.c		yelp-man.h				\
+	yelp-reader.c		yelp-reader.h				\
 	yelp-section.c		yelp-section.h				\
 	yelp-scrollkeeper.c	yelp-scrollkeeper.h			\
 	yelp-util.c		yelp-util.h				\
