--- a/configure.in
+++ b/configure.in
@@ -4,6 +4,8 @@ AM_INIT_AUTOMAKE(yelp, 0.7)
 
 AC_PROG_INTLTOOL
 
+AC_ARG_WITH(html-widget, [  --with-html-widget=[gtkhtml1/gtkhtml2] html widget to use])
+
 AM_MAINTAINER_MODE
 GNOME_COMMON_INIT
 GNOME_COMPILE_WARNINGS(maximum)
@@ -38,29 +40,34 @@ else
 fi
 AC_DEFINE_UNQUOTED(GNOMELOCALEDIR, "$GNOMELOCALEDIR")
 
-PKG_CHECK_MODULES(YELP, libgtkhtml-2.0 >= 1.99.7	\
-			gnome-vfs-2.0 >= 1.1		\
+PKG_CHECK_MODULES(YELP, gnome-vfs-2.0 >= 1.1		\
 			libgnome-2.0 >= 1.112.1		\
 			libgnomeui-2.0 >= 1.103.0	\
 			libbonobo-2.0 >= 1.108.0	\
 			libxslt >= 1.0.15		\
 			gconf-2.0)
 
-AC_SUBST(YELP_CFLAGS)
-AC_SUBST(YELP_LIBS)
+CFLAGS="$YELP_CFLAGS $CFLAGS"
 
-YELP_MODULES="libgtkhtml-2.0 gnome-vfs-2.0 libgnomeui-2.0 libbonobo-2.0"
+YELP_MODULES="gnome-vfs-2.0 libgnomeui-2.0 libbonobo-2.0"
 
-YELP_IDL_INCLUDES="`$PKG_CONFIG --variable=idldir libgtkhtml-2.0 gnome-vfs-2.0 libgnomeui-2.0 libbonobo-2.0 bonobo-activation-2.0| sed -e 's/^/ /' -e 's/ \+$//' -e 's/ \+/ -I /g' -e 's/^ \+//'`"
+YELP_IDL_INCLUDES="`$PKG_CONFIG --variable=idldir gnome-vfs-2.0 libgnomeui-2.0 libbonobo-2.0 bonobo-activation-2.0| sed -e 's/^/ /' -e 's/ \+$//' -e 's/ \+/ -I /g' -e 's/^ \+//'`"
 AC_SUBST(YELP_IDL_INCLUDES)
 
-dnl ====================================
-dnl = Bzip2, for the help converters
-dnl ====================================
-AC_CHECK_LIB(bz2, bzread, [AC_DEFINE(HAVE_LIBBZ2)])
-dnl <= Check for bzip2 > 1.0.0
-    AC_CHECK_LIB(bz2, BZ2_bzread, [AC_DEFINE(HAVE_LIBBZ2)])
-    dnl =>
+if test x$with_html_widget = xgtkhtml1; then
+	PKG_CHECK_MODULES(HTML_WIDGET, libgtkhtml-3.0 >= 3.0)
+else
+	PKG_CHECK_MODULES(HTML_WIDGET, libgtkhtml-2.0 >= 1.99.7)
+fi
+	
+CFLAGS="$HTML_WIDGET_CFLAGS $CFLAGS"
+
+AM_CONDITIONAL(HTML_WIDGET_GTKHTML1, test x$with_html_widget = xgtkhtml1)
+if test x$with_html_widget = xgtkhtml1; then
+   echo "***"
+   echo "*** Using GtkHMTML 1 instead of the default GtkHTML 2"
+   echo "***"
+fi
 	
 AC_OUTPUT([
 Makefile
