fixed mem leak.
2002-05-18  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-toc.c (toc_info): fixed mem leak.

	* configure.in (YELP_IDL_INCLUDES): readded bzip2 check, doh!

--- a/configure.in
+++ b/configure.in
@@ -54,6 +54,14 @@ YELP_MODULES="gnome-vfs-2.0 libgnomeui-2.0 libbonobo-2.0"
 YELP_IDL_INCLUDES="`$PKG_CONFIG --variable=idldir gnome-vfs-2.0 libgnomeui-2.0 libbonobo-2.0 bonobo-activation-2.0| sed -e 's/^/ /' -e 's/ \+$//' -e 's/ \+/ -I /g' -e 's/^ \+//'`"
 AC_SUBST(YELP_IDL_INCLUDES)
 
+dnl ====================================
+dnl = Bzip2, for the help converters
+dnl ====================================
+AC_CHECK_LIB(bz2, bzread, [AC_DEFINE(HAVE_LIBBZ2)])
+dnl <= Check for bzip2 > 1.0.0
+    AC_CHECK_LIB(bz2, BZ2_bzread, [AC_DEFINE(HAVE_LIBBZ2)])
+    dnl =>
+
 if test x$with_html_widget = xgtkhtml1; then
 	PKG_CHECK_MODULES(HTML_WIDGET, libgtkhtml-3.0 >= 3.0)
 else
