implemented jimmac's mockups.
2002-05-21  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-toc.c: implemented jimmac's mockups.

	* src/yelp-uri.c: added support for file:

	* src/Makefile.am (INCLUDES): added IMAGEDIR

	* data/images/*: new files

	* data/Makefile.am: new file

	* configure.in:
	- added data/Makefile, data/images/Makefile to AC_OUTPUT.

	* Makefile.am (SUBDIRS): added data

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,6 +6,7 @@ INCLUDES =								\
 	-DSYSCONFDIR=\""$(sysconfdir)"\"				\
 	-DDATADIR=\""$(datadir)"\"					\
 	-DLIBDIR=\""$(libdir)"\"					\
+	-DIMAGEDIR=\""$(datadir)/images/yelp"\"				\
 	-DGNOMELOCALEDIR=\""$(datadir)/locale"\"
 
 if HTML_WIDGET_GTKHTML1
