use yelp-marshal-main.c instead of yelp-marshal.c and yelp-marshal.h
2002-05-23  Mikael Hallendal  <micke@codefactory.se>

	* src/Makefile.am (yelp_SOURCES): use yelp-marshal-main.c instead
	  of yelp-marshal.c and yelp-marshal.h

	* src/yelp-marshal-main.c: added to get rid of warnings in
	  yelp-marshal.c

--- a/configure.in
+++ b/configure.in
@@ -8,7 +8,7 @@ AC_ARG_WITH(html-widget, [  --with-html-widget=[gtkhtml1/gtkhtml2] html widget t
 
 AM_MAINTAINER_MODE
 GNOME_COMMON_INIT
-GNOME_COMPILE_WARNINGS(maximum)
+GNOME_COMPILE_WARNINGS(error)
 
 AC_PROG_CC
 AC_ISC_POSIX
