added, used to get a chunk from a multi chunked document.
2002-05-27  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-reader.c:
	(reader_get_chunk): added, used to get a chunk from a multi
	  chunked document.
	(reader_man_info_start):
	- now handles docbook too. will be renamed later.
	- add docbook results in cache.
	- get chunk from document if docbook.
	(yelp_reader_start):
	- check in cache if document is there, if so, just get the chunk
	  and signal.
	- if not in cache, use g_timeout_add instead of idle.

	* src/yelp-db2html.c:
	- this is now it's own binary
	- use multichunk
	- don't use YelpURI so that we don't need to init gnome vfs

	* src/yelp-db2html.h: removed

	* src/yelp-cache.c: first dummy implementation of cache.

	* src/yelp-base.c (yelp_base_init): init the cache.

	* src/Makefile.am:
	(yelp_db2html_LDADD): added binary for db2html.
	(yelp_SOURCES): added yelp-cache.[ch] and removed
	  yelp-db2html.[ch]

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -15,7 +15,7 @@ else
 html_widget_impl=yelp-html-gtkhtml2.c
 endif
 
-bin_PROGRAMS = yelp
+bin_PROGRAMS = yelp yelp-db2html
 
 noinst_PROGRAMS = test-uri test-reader
 
@@ -31,10 +31,10 @@ test_uri_LDADD = 							\
 test_reader_SOURCES = 							\
 	test-reader.c							\
 	yelp-uri.c		yelp-uri.h				\
+	yelp-cache.c		yelp-cache.h				\
 	yelp-reader.c		yelp-reader.h				\
 	yelp-error.c		yelp-error.h				\
 	yelp-util.c		yelp-util.h				\
-	yelp-db2html.c		yelp-db2html.h				\
 	yelp-marshal-main.c
 
 test_reader_LDADD = 							\
@@ -56,11 +56,17 @@ yelp-marshal.c: yelp-marshal.h
 
 yelp-marshal-main.c: yelp-marshal.c
 
+yelp_db2html_SOURCES =							\
+	yelp-db2html.c
+
+yelp_db2html_LDADD =							\
+	@YELP_LIBS@
+
 yelp_SOURCES =								\
 	$(gnome_yelp_idl_sources)					\
 	yelp-base.c		yelp-base.h				\
+	yelp-cache.c		yelp-cache.h				\
 	yelp-error.c		yelp-error.h				\
-	yelp-db2html.c		yelp-db2html.h				\
 	yelp-history.c		yelp-history.h				\
 	$(html_widget_impl) 	yelp-html.h				\
 	yelp-index-model.c	yelp-index-model.h			\
