--- a/configure.in
+++ b/configure.in
@@ -81,6 +81,7 @@ AC_OUTPUT([
 Makefile
 src/Makefile
 stylesheets/Makefile
+stylesheets/docbook/Makefile
 data/Makefile
 data/images/Makefile
 po/Makefile.in
