define yelplocaledir, Fixes #83639
2002-05-31  Mikael Hallendal  <micke@codefactory.se>

	* configure.in (yelp): define yelplocaledir, Fixes #83639

	* src/Makefile.am (INCLUDES): use yelplocaledir

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,7 +7,7 @@ INCLUDES =								\
 	-DDATADIR=\""$(datadir)"\"					\
 	-DLIBDIR=\""$(libdir)"\"					\
 	-DIMAGEDIR=\""$(datadir)/images/yelp"\"				\
-	-DGNOMELOCALEDIR=\""$(datadir)/locale"\"
+	-DGNOMELOCALEDIR=\""$(yelplocaledir)"\"
 
 if HTML_WIDGET_GTKHTML1
 html_widget_impl=yelp-html-gtkhtml1.c
