--- a/configure.in
+++ b/configure.in
@@ -33,6 +33,12 @@ AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")
 ALL_LINGUAS="az bg ca da de el es et fr it ja ko lv ms nl nn no pl pt pt_BR ru sk sl sv tr uk vi wa zh_CN zh_TW"
 AM_GLIB_GNU_GETTEXT
 
+# AM_GLIB_GNU_GETTEXT above substs $DATADIRNAME
+# this is the directory where the *.{mo,gmo} files are installed
+yelplocaledir='${prefix}/${DATADIRNAME}/locale'
+AC_SUBST(yelplocaledir)
+
+
 if test "x$prefix" = "xNONE"; then
   GNOMELOCALEDIR=$ac_default_prefix/share/locale
 else
