libgnome/libgnome-2.0.pc.in help-converters/gnome-vfs-module/Makefile.am
    * libgnome/libgnome-2.0.pc.in
    * help-converters/gnome-vfs-module/Makefile.am
    * help-converters/gnome-vfs-module/help-method.c
    * help-converters/info/Makefile.am
    * help-converters/man/Makefile.am
    * help-converters/docbook/Makefile.am
    Now install gnome2-info2html, gnome2-man2html, and gnome2-db2html
    to libexec rather than bin.

--- a/src/man2html/Makefile.am
+++ b/src/man2html/Makefile.am
@@ -2,7 +2,7 @@
 
 INCLUDES = $(LIBGNOME_CFLAGS)
 
-bin_PROGRAMS = gnome2-man2html
+libexec_PROGRAMS = gnome2-man2html
 
 gnome2_man2html_SOURCES = gnome-man2html.c
 
