--- a/src/info2html/Makefile.am
+++ b/src/info2html/Makefile.am
@@ -2,7 +2,7 @@
 
 INCLUDES = $(LIBGNOME_CFLAGS)
 
-bin_PROGRAMS = gnome2-info2html
+libexec_PROGRAMS = gnome2-info2html
 
 gnome2_info2html_SOURCES = main.c parse.c utils.c html.c data.h html.h parse.h utils.h version.h
 
