--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,6 +1,6 @@
 # Add files with translateable strings here.
 # Please keep this file sorted alphabetically.
-src/GNOME_Yelp.server.in
+src/GNOME_Yelp.server.in.h
 src/yelp-base.c
 src/yelp-db2html.c
 src/yelp-history.c
@@ -14,4 +14,4 @@ src/yelp-view-content.c
 src/yelp-view-index.c
 src/yelp-view-toc.c
 src/yelp-window.c
-yelp.desktop.in
+yelp.desktop.in.h
