- Fix the desktop file so that it validates correctly.
2002-08-20  Ross Burton  <ross@burtonini.com>

	* yelp.desktop.in:
	- Fix the desktop file so that it validates correctly.

--- a/yelp.desktop.in
+++ b/yelp.desktop.in
@@ -1,9 +1,9 @@
 [Desktop Entry]
+Encoding=UTF-8
 _Name=Help
 _Comment=Get help with GNOME
 Exec=yelp
 Icon=gnome-help.png
-Terminal=0
+Terminal=false
 Type=Application
-X-GNOME-DocPath=
-Categories=Application;Core;
+Categories=GNOME;Application;Core;
