changed to reflect changes in the views.
2002-09-20  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-window.c: changed to reflect changes in the views.

	* src/yelp-view.[ch]:
	- added
	- new super class of the views.

	* src/yelp-view-content.[ch]:
	* src/yelp-view-index.[ch]:
	* src/yelp-view-toc.[ch]:
	- removed signals
	- cleaning up and making it a YelpView subclass.

	* src/yelp-view-content.c:
	- removed signals
	- cleaning up and making it a YelpView subclass.

	* src/Makefile.am (yelp_SOURCES): added yelp-view.[ch]

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -92,6 +92,7 @@ yelp_SOURCES =								\
 	yelp-section.c		yelp-section.h				\
 	yelp-scrollkeeper.c	yelp-scrollkeeper.h			\
 	yelp-util.c		yelp-util.h				\
+	yelp-view.c		yelp-view.h				\
 	yelp-view-content.c	yelp-view-content.h			\
 	yelp-view-index.c	yelp-view-index.h			\
 	yelp-view-toc.c		yelp-view-toc.h				\
