Don't include libgnome and gnome-vfs stuff.
2002-09-23  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-db2html.c: Don't include libgnome and gnome-vfs stuff.

	* configure.in: Added DB2HTML_* variables.

	* src/Makefile.am (test_uri_LDADD): use special LIBS for
	  yelp-db2html.

--- a/configure.in
+++ b/configure.in
@@ -58,6 +58,9 @@ else
 fi
 AC_DEFINE_UNQUOTED(GNOMELOCALEDIR, "$GNOMELOCALEDIR")
 
+PKG_CHECK_MODULES(DB2HTML, glib-2.0 >= 2.0.6		\
+			   libxslt >= 1.0.15)
+
 PKG_CHECK_MODULES(YELP, gnome-vfs-2.0 >= 1.1		\
 			libgnome-2.0 >= 2.0.2		\
 			libgnomeui-2.0 >= 1.103.0	\
