Don't include libgnome and gnome-vfs stuff.
2002-09-23  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-db2html.c: Don't include libgnome and gnome-vfs stuff.

	* configure.in: Added DB2HTML_* variables.

	* src/Makefile.am (test_uri_LDADD): use special LIBS for
	  yelp-db2html.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -71,7 +71,7 @@ yelp_pregenerate_SOURCES =						\
 	yelp-pregenerate.c      yelp-pregenerate.h
 
 yelp_db2html_LDADD =							\
-	@YELP_LIBS@
+	@DB2HTML_LIBS@
 
 yelp_pregenerate_LDADD =						\
 	@YELP_LIBS@
