link with POPT_LIBS.
2002-10-19  Mikael Hallendal  <micke@codefactory.se>

	* src/Makefile.am (yelp_LDADD): link with POPT_LIBS.

	* configure.in: Check for popt, fixes #96168

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -93,7 +93,8 @@ yelp_SOURCES =								\
 
 yelp_LDADD =								\
 	@YELP_LIBS@							\
-	@HTML_WIDGET_LIBS@
+	@HTML_WIDGET_LIBS@						\
+	$(POPT_LIBS)
 
 gnome_yelp_idl_sources =						\
 	GNOME_Yelp-stubs.c						\
