--- a/configure.in
+++ b/configure.in
@@ -56,15 +56,22 @@ else
 fi
 AC_DEFINE_UNQUOTED(GNOMELOCALEDIR, "$GNOMELOCALEDIR")
 
-PKG_CHECK_MODULES(DB2HTML, glib-2.0 >= 2.0.6		\
-			   libxslt >= 1.0.15)
+PKG_CHECK_MODULES(DB2HTML,
+[
+	glib-2.0 >= 2.0.6
+	libxslt >= 1.0.15
+])
 
-PKG_CHECK_MODULES(YELP, gnome-vfs-2.0 >= 1.1		\
-			libgnome-2.0 >= 2.0.2		\
-			libgnomeui-2.0 >= 1.103.0	\
-			libbonobo-2.0 >= 1.108.0	\
-			libxslt >= 1.0.15		\
-			gconf-2.0)
+PKG_CHECK_MODULES(YELP,
+[
+	gnome-vfs-2.0 >= 1.1
+	libgnome-2.0 >= 2.0.2
+	libgnomeui-2.0 >= 1.103.0
+	libbonobo-2.0 >= 1.108.0
+	libxslt >= 1.0.15
+	libglade-2.0 >= 2.0.0
+	gconf-2.0
+])
 
 CFLAGS="$YELP_CFLAGS $CFLAGS"
 
@@ -113,5 +120,6 @@ stylesheets/docbook/catalog
 stylesheets/docbook/dtd/Makefile
 data/Makefile
 data/images/Makefile
+data/ui/Makefile
 po/Makefile.in
 ])
