add X-GNOME-BUGZILLA stuff
2002-11-18  Fernando Herrera <fherrera@onirica.com>

	* yelp.desktop.in: add X-GNOME-BUGZILLA stuff

--- a/yelp.desktop.in
+++ b/yelp.desktop.in
@@ -7,3 +7,6 @@ Icon=gnome-help.png
 Terminal=false
 Type=Application
 Categories=GNOME;Application;Core;
+X-GNOME-Bugzilla-Bugzilla=GNOME
+X-GNOME-Bugzilla-Product=Yelp
+X-GNOME-Bugzilla-Component=general
