--- a/configure.in
+++ b/configure.in
@@ -1,10 +1,8 @@
 AC_INIT(src/yelp-main.c)
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(yelp, 2.2.0)
+AM_INIT_AUTOMAKE(yelp, 2.3.0)
 
 AC_PROG_INTLTOOL
-
-AC_ARG_WITH(html-widget, [  --with-html-widget=[gtkhtml1/gtkhtml2] html widget to use])
 
 AM_MAINTAINER_MODE
 
@@ -71,6 +69,7 @@ PKG_CHECK_MODULES(YELP,
 	libxslt >= 1.0.15
 	libglade-2.0 >= 2.0.0
 	gconf-2.0
+	libgtkhtml-2.0 >= 2.1.2
 ])
 
 CFLAGS="$YELP_CFLAGS $CFLAGS"
@@ -96,21 +95,6 @@ AC_CHECK_LIB(popt, poptGetArgs, [POPT_LIBS="-lpopt"],
 
 AC_SUBST(POPT_LIBS)
 
-if test x$with_html_widget = xgtkhtml1; then
-	PKG_CHECK_MODULES(HTML_WIDGET, libgtkhtml-3.0 >= 3.0)
-else
-	PKG_CHECK_MODULES(HTML_WIDGET, libgtkhtml-2.0 >= 2.1.2)
-fi
-	
-CFLAGS="$HTML_WIDGET_CFLAGS $CFLAGS"
-
-AM_CONDITIONAL(HTML_WIDGET_GTKHTML1, test x$with_html_widget = xgtkhtml1)
-if test x$with_html_widget = xgtkhtml1; then
-   echo "***"
-   echo "*** Using GtkHMTML 1 instead of the default GtkHTML 2"
-   echo "***"
-fi
-	
 AC_OUTPUT([
 Makefile
 src/Makefile
