src/Makefile.am src/yelp-db2html.c src/yelp-scrollkeeper.c
2003-06-10 John Fleck <jfleck@inkstain.net>

	* src/Makefile.am
	* src/yelp-db2html.c
	* src/yelp-scrollkeeper.c
	* stylesheets/Makefile.am
	* stylesheets/yelp-custom.xsl
	* stylesheets/yelp-customization.xsl
	added
	* stylesheets/yelp-functions.xsl
	patch from Shaun McCance to address bug #114117

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -64,10 +64,10 @@ yelp_pregenerate_SOURCES =						\
 	yelp-pregenerate.c      yelp-pregenerate.h
 
 yelp_db2html_LDADD =							\
-	@DB2HTML_LIBS@
+	@DB2HTML_LIBS@ -lexslt
 
 yelp_pregenerate_LDADD =						\
-	@YELP_LIBS@
+	@YELP_LIBS@ -lexslt
 
 yelp_SOURCES =								\
 	$(gnome_yelp_idl_sources)					\
