--- a/yelp.desktop.in
+++ b/yelp.desktop.in
@@ -4,6 +4,7 @@ _Name=Help
 _Comment=Get help with GNOME
 Exec=yelp
 Icon=gnome-help.png
+StartupNotify=true
 Terminal=false
 Type=Application
 Categories=GNOME;Application;Core;
