Replaced yelp-base for yelp. Not sure what should be in there really...
2003-08-15  Mikael Hallendal  <micke@imendio.com>

        * src/GNOME_Yelp.server.in: Replaced yelp-base for yelp. Not sure what
          should be in there really... Might fix bug #119764

--- a/src/GNOME_Yelp.server.in
+++ b/src/GNOME_Yelp.server.in
@@ -1,5 +1,5 @@
 <oaf_info>
-  <oaf_server iid="OAFIID:GNOME_Yelp_Factory" type="exe" location="yelp-base">
+  <oaf_server iid="OAFIID:GNOME_Yelp_Factory" type="exe" location="yelp">
     <oaf_attribute name="repo_ids" type="stringv">
       <item value="IDL:GNOME/GenericFactory:1.0"/>
     </oaf_attribute>
