- Revert change for making navbars in C. Should not be necessary with new
* src/yelp-cache.c:
* src/yelp-cache.h:
* src/yelp-db2html.c:
* src/yelp-reader.c:
* src/yelp-scrollkeeper.c:
* src/yelp-view-content.c:
- Revert change for making navbars in C.  Should not be necessary
  with new stylesheets.
- Use new stylesheets

* stylesheets/db2html*.xsl:
* stylesheets/yelp-customization.xsl:
- Uber-fast new stylesheets

* stylesheets/Makefile.am:
* stylesheets/docbook/Makefile.am:
- Use new stylesheets

--- a/stylesheets/Makefile.am
+++ b/stylesheets/Makefile.am
@@ -3,10 +3,40 @@ SUBDIRS = docbook
 yelpcustomizationdir=$(datadir)/sgml/docbook/yelp
 
 yelpcustomization_DATA = 	\
-	yelp-customization.xsl	\
-	yelp-functions.xsl	\
-	yelp-custom.xsl		\
-	l10n.xml
+	db2html-admon.xsl	\
+	db2html-biblio.xsl	\
+	db2html-block.xsl	\
+	db2html-callout.xsl	\
+	db2html-chunk.xsl	\
+	db2html-common.xsl	\
+	db2html-division.xsl	\
+	db2html-ebnf.xsl	\
+	db2html-footnote.xsl	\
+	db2html-formal.xsl	\
+	db2html-glossary.xsl	\
+	db2html-html.xsl	\
+	db2html-index.xsl	\
+	db2html-inline.xsl	\
+	db2html-list.xsl	\
+	db2html-lists.xsl	\
+	db2html-math.xsl	\
+	db2html-media.xsl	\
+	db2html-navbar.xsl	\
+	db2html-node.xsl	\
+	db2html-param.xsl	\
+	db2html-qanda.xsl	\
+	db2html-refentry.xsl	\
+	db2html-section.xsl	\
+	db2html-suppressed.xsl	\
+	db2html-synopsis.xsl	\
+	db2html-table.xsl	\
+	db2html-title.xsl	\
+	db2html-titlepage.xsl	\
+	db2html-tmp.xsl		\
+	db2html-toc.xsl		\
+	db2html-xref.xsl	\
+	db2html.xsl		\
+	gettext.xsl		\
+	yelp-customization.xsl
 
 EXTRA_DIST=$(yelpcustomization_DATA)
-
