- Removed db2html-section.xsl - Removed db2html-node.xsl - Added
* stylesheets/Makefile.am:
- Removed db2html-section.xsl
- Removed db2html-node.xsl
- Added db2html-header.xsl

* stylesheets/db2html-chunk.xsl:
* stylesheets/db2html-html.xsl:
* stylesheets/db2html-titlepage.xsl
- Some more changes for the new chunking behavior.  Mostly stuff I forgot.

* stylesheets/yelp-customization.xsl:
- Make the new chunking stuff actually work in Yelp.

--- a/stylesheets/Makefile.am
+++ b/stylesheets/Makefile.am
@@ -14,6 +14,7 @@ yelpcustomization_DATA = 	\
 	db2html-footnote.xsl	\
 	db2html-formal.xsl	\
 	db2html-glossary.xsl	\
+	db2html-header.xsl	\
 	db2html-html.xsl	\
 	db2html-index.xsl	\
 	db2html-inline.xsl	\
@@ -22,11 +23,9 @@ yelpcustomization_DATA = 	\
 	db2html-math.xsl	\
 	db2html-media.xsl	\
 	db2html-navbar.xsl	\
-	db2html-node.xsl	\
 	db2html-param.xsl	\
 	db2html-qanda.xsl	\
 	db2html-refentry.xsl	\
-	db2html-section.xsl	\
 	db2html-suppressed.xsl	\
 	db2html-synopsis.xsl	\
 	db2html-table.xsl	\
