--- a/configure.in
+++ b/configure.in
@@ -54,7 +54,8 @@ PKG_CHECK_MODULES(YELP,
 	libgnome-2.0 >= 2.0.2
 	libgnomeui-2.0 >= 1.103.0
 	libbonobo-2.0 >= 1.108.0
-	libxslt >= 1.0.15
+	libxml-2.0 >= 2.6.0
+	libxslt >= 1.0.33
 	libglade-2.0 >= 2.0.0
 	gconf-2.0
 	libgtkhtml-2.0 >= 2.1.2
