- Add yelp-toc-pager.[ch] to test-pager build.
* src/Makefile.am:
- Add yelp-toc-pager.[ch] to test-pager build.

* src/yelp-toc-pager.c:
- Make the hashing of OMF files work completely.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -30,6 +30,7 @@ test_pager_SOURCES =							\
 	test-pager.c							\
 	yelp-pager.c		yelp-pager.h				\
 	yelp-db-pager.c		yelp-db-pager.h				\
+	yelp-toc-pager.c	yelp-toc-pager.h			\
 	yelp-uri.c		yelp-uri.h				\
 	yelp-marshal-main.c
 
