- Add yelp-error.[ch] to SOURCES for test-pager.
* src/Makefile.am:
- Add yelp-error.[ch] to SOURCES for test-pager.

* src/yelp-error.h:
- Add YELP_ERROR_FAILED_TOC.

* src/yelp-pager.c:
- Don't free memory you're not supposed to, dummy.

* src/yelp-toc-pager.c:
- More work on the toc generation.

* src/yelp-window.c:
- Make sidebar selection work.
- Remove huge block of commented-out code.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -27,12 +27,12 @@ test_uri_LDADD = 							\
 	@YELP_LIBS@
 
 test_pager_SOURCES =							\
-	test-pager.c							\
+	yelp-error.c		yelp-error.h				\
 	yelp-pager.c		yelp-pager.h				\
 	yelp-db-pager.c		yelp-db-pager.h				\
 	yelp-toc-pager.c	yelp-toc-pager.h			\
 	yelp-uri.c		yelp-uri.h				\
-	yelp-marshal-main.c
+	yelp-marshal-main.c	test-pager.c
 
 test_pager_LDADD =							\
 	@DB2HTML_LIBS@ @YELP_LIBS@ -lexslt
