- Added the TOC XML file.
* data/Makefile.am:
* data/toc.xml:
* po/POTFILES.in:
- Added the TOC XML file.

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,1 +1,12 @@
 SUBDIRS = images ui
+
+@INTLTOOL_XML_RULE@
+
+tocdir = $(datadir)/yelp
+
+toc_DATA =						\
+	toc.xml
+
+EXTRADIST :=						\
+	toc.xml.in					\
+	toc.xml
