- Filled in just a little more to show how it works, so that I can get
* data/toc.xml.in:
- Filled in just a little more to show how it works, so that I can
  get somebody else to write this file for me.

--- a/data/toc.xml.in
+++ b/data/toc.xml.in
@@ -4,6 +4,14 @@
 
 	<toc id="internet">
 		<_title>Internet Applications</_title>
+
+		<category>GNOME|Internet</category>
+	</toc>
+
+	<toc id="multimedia">
+		<_title>Multimedia Applications</_title>
+
+		<category>GNOME|Multimedia</category>
 	</toc>
 </toc>
 
