- Some work on the TOC.
* data/toc.xml.in:
- Some work on the TOC.

* src/yelp-db-pager.c:
- Actually use the parser options.

--- a/data/toc.xml.in
+++ b/data/toc.xml.in
@@ -6,6 +6,7 @@
 		<_title>Desktop</_title>
 
 		<category>GNOME|Core Desktop</category>
+		<category>GNOME|Desktop</category>
 	</toc>
 
 	<toc id="Games">
@@ -25,8 +26,8 @@
 		<category>GNOME|Games</category>
 	</toc>
 
-	<toc id="Education Applications">
-		<_title>Education</_title>
+	<toc id="Education">
+		<_title>Education Applications</_title>
 
 		<category>Applications|Education</category>
 		<category>Applications|Eduction|Arts</category>
