- It's test-pager, not yelp-pager.
* src/.cvsignore:
- It's test-pager, not yelp-pager.

--- a/src/.cvsignore
+++ b/src/.cvsignore
@@ -11,11 +11,11 @@ GNOME_Yelp.h
 GNOME_Yelp.server
 gnome_yelp_idl_stamp
 test-uri
+test-pager
 test-reader
 yelp-marshal.c
 yelp-marshal.h
 yelp
 yelp-db2html
-yelp-pager
 yelp-pregenerate
 core*
