--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -4,13 +4,16 @@ data/toc.xml.in
 data/ui/yelp.glade
 src/GNOME_Yelp.server.in
 src/yelp-base.c
+src/yelp-db-pager.c
 src/yelp-db2html.c
 src/yelp-history.c
 src/yelp-info.c
 src/yelp-main.c
 src/yelp-man.c
+src/yelp-pager.c
 src/yelp-scrollkeeper.c
 src/yelp-section.c
+src/yelp-toc-pager.c
 src/yelp-util.c
 src/yelp-view-content.c
 src/yelp-view-index.c
